fix: navbar should be works on mobile

--- a/dev/scss/components/header.scss
+++ b/dev/scss/components/header.scss
@@ -46,8 +46,6 @@
 
 }
 
-
-
 .header-menu {
     width: 100%;
     margin: 0 auto;
@@ -57,11 +55,45 @@
     display: flex;
     justify-content: space-between;
 
+    @media(max-width: 1170px){
+        flex-direction: column;
+    }
+
+    #header-menu-button {
+        background: transparent;
+        border: none;
+        border-top: 5px solid $default_color;
+        border-bottom: 5px solid $default_color;
+        border-radius: 2px;
+
+        position: relative;
+
+        padding: 5px;
+
+
+        width: 2rem;
+        height: 4px;
+
+        margin: 10px auto;
+        
+        @media(min-width: 1170px){
+            display: none;
+        }
+    }
+
+    
+
     .apresentacao, .reserva {
         width: 100%;
 
         display: flex;
         flex-direction: column;
+
+        transition: display 0.3s;
+
+        @media(max-width: 1170px){
+            display: none;
+        }
 
 
         .menu-items1, .menu-items2 {
@@ -72,6 +104,32 @@
             padding: unset;
             margin-top: 25px;
 
+            a {
+                transition: color 0.2s;
+            }
+            a:hover {
+                color: $default_color;
+            }
+
+            @media(max-width: 1170px){
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+
+                li, a {
+                    padding: 10px;
+                }
+            }
+
+        }
+
+        
+        .menu-contato {
+            justify-content: flex-start;        
+        }
+        .menu-reserva {
+            justify-content: flex-end;
         }
 
         .menu-contato, .menu-reserva {
@@ -81,12 +139,10 @@
             height: 50%;
             display: flex;
             align-items: center;
-        }
-        .menu-contato {
-            justify-content: flex-start;
-        }
-        .menu-reserva {
-            justify-content: flex-end;
+            @media(max-width: 1170px){
+                margin-top: 30px;
+                justify-content: center;
+            }
         }
 
         #faca-reserva {
@@ -96,14 +152,22 @@
             max-width: 200px;
             width: 100%;
 
-
-
             display: flex;
             align-items: center;
             justify-content: center;
+            
+            transition: transform 0.2s;
+
+            &:hover {
+                transform: scale(1.1);
+            }
 
             > img {
                 margin-right: 10px;
+            }
+
+            @media(max-width: 1170px){
+                padding: 10px 10px;
             }
         }
     }
@@ -112,5 +176,9 @@
         margin-top: -75px;
         position: relative;
         z-index: 2;
+
+        @media(max-width: 1170px){
+            display: none;
+        }
     }
 }
